syntax = "proto3";

import "common/api/proto/common.proto";

package Api;

option go_package = "github.com/justclimber/fda/common/api";

service Auth {
  rpc Register(RegisterIn) returns (RegisterOut) {}
  rpc Login(LoginIn) returns (LoginOut) {}
}

message RegisterIn {
  string name = 1;
}

message RegisterOut {
  uint64 ID = 1;
  uint32 errCode = 2;
}

message LoginIn {
  uint64 ID = 1;
}

message LoginOut {
  User user = 1;
  uint32 errCode = 2;
}
